--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=inventory-service
 
-server.port=0
+server.port=8094
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventory
 spring.datasource.username=postgres
@@ -15,3 +15,11 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.properties.spring.json.value.default.type=com.example.InventoryService.event.OrderEvent
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.endpoints.web.exposure.include=*
